grammar.js
    source_file: ($) => repeat(choice($.import_statement, $.statement)),

    comment: ($) => token(seq("//", /[^\n]*/)),

    identifier: ($) => /[A-Za-z_$][A-Za-z0-9_]*/,
    number: ($) => /[0-9][0-9_]*(\.[0-9_]+)?/,
    string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.brace_escape, $.string_interpolation)),
        '"'
      ),
    string_content: ($) => token.immediate(choice(/[^"\\{}]+/, "}")),
    boolean: ($) => choice("true", "false"),
    statement: ($) =>
      choice(
        $.variable_declaration,
        $.function_declaration,
        $.extern_function,
        $.struct_declaration,
        $.enum_declaration,
        $.trait_declaration,
        $.impl_block,
        $.if_statement,
        $.while_loop,
        prec.dynamic(1, $.for_in_loop),
        $.for_loop,
        $.break_statement,
        $.defer_statement,
        $.expression_statement
      ),

    parameter_list: ($) =>
      seq("(", optional(sep1($.parameter, ",")), ")"),

    parameter: ($) =>
      seq(optional("mut"), field("name", $.identifier), optional(seq(":", field("type", $.type)))),

    trait_declaration: ($) =>
      seq(
        optional("private"),
        "trait",
        field("name", $.identifier),
        "{",
        repeat($.trait_method),
        "}"
      ),

    trait_method: ($) =>
      seq(
        "fn",
        optional(field("mutating", "mut")),
        field("name", choice($.identifier, alias("mut", $.identifier))),
        field("parameters", $.parameter_list),
        optional(field("return_type", $.type))
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression: ($) => $.assignment_expression,

    range_expression: ($) =>
      choice(
        prec.left(PREC.range, seq($.or_expression, "..", $.or_expression)),
        $.or_expression
      ),

    match_expression: ($) =>
      seq(
        "match",
        optional(field("subject", $.expression)),
        "{",
        repeat($.match_case),
        "}"
      ),

    match_case: ($) =>
      seq(
        field("pattern", choice($.expression, $.wildcard)),
        "=>",
        field("body", choice($.block, $.expression)),
        optional(",")
      ),

    wildcard: ($) => "_",

    nullable_type: ($) => prec.right(seq($._type_primary, optional("?"))),

    _type_primary: ($) =>
      choice(
        $.primitive_type,
        $.mutable_type,
        $.parenthesized_type,
        $.function_type,
        $.fixed_array_type,
        $.list_type,
        $.map_type,
        $.generic_type,
        $.qualified_identifier,
        $.identifier
      ),

    primitive_type: ($) => choice("Int", "Float", "Str", "Bool", "Void"),
